Bug 167718 - Internal Error - Unexpected server response to GROUP command: 502 Authentication error
Summary: Internal Error - Unexpected server response to GROUP command: 502 Authenticat...
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 167419 168674 173680 178365 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-30 11:09 UTC by Jakub Schmidtke
Modified: 2009-01-18 01:59 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Schmidtke 2008-07-30 11:09:34 UTC
Version:           0.99.01 (using KDE 4.1.0)
Installed from:    Unlisted Binary Package
Compiler:          gcc 4.3.1 20080724 
OS:                Linux

When I clicked on one of the posts on the group, I got an error dialog with:

Internal Error
Please send a full bug report at http://bugs.kde.org
Unexpected server response to GROUP command:
502 Authentication error
Comment 1 Milosz Marian Hulboj 2008-11-04 21:11:30 UTC
The same error after upgrading to Interpid Ibex (64-bit).
News server: news.motzarella.org
Version: 0.99.01 (KDE 4.1.2)
Comment 2 Jan Torben Heuer 2008-11-14 11:16:39 UTC
same for me here. Works with GMANE (I think because there is no atuh necessary...). But for my local ISP's news server it does not.

Knode Version 0.99.01 form ubuntu ibex
Comment 3 Fernando Toledo 2008-12-02 01:38:30 UTC
i try to debug from my nntp server and i can see that the username is not send to the server.
Comment 4 Olivier Trichet 2008-12-06 15:04:13 UTC
Ok, I reproduce the issue on news.motzarella.org. The server never asks for authentication (code 480), so none is sent.

I will commit something later that also try an authentication at the beginning of the nntp session if a username/password is supplied.

Thank for the infos.
Comment 5 Olivier Trichet 2008-12-07 12:27:55 UTC
SVN commit 893724 by otrichet:

Try to login just after the connection to the server. Some servers do not give access to some groups otherwise.

BUG: 167718


 M  +48 -18    nntp.cpp  
 M  +7 -1      nntp.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=893724
Comment 6 Olivier Trichet 2008-12-07 13:08:16 UTC
*** Bug 168674 has been marked as a duplicate of this bug. ***
Comment 7 Olivier Trichet 2008-12-07 13:11:29 UTC
*** Bug 173680 has been marked as a duplicate of this bug. ***
Comment 8 Olivier Trichet 2008-12-09 19:41:15 UTC
SVN commit 894985 by otrichet:

backport 893724:

Try to login just after the connection to the server. Some servers do not give access to some groups otherwise.

CCBUG: 167718


 M  +48 -18    nntp.cpp  
 M  +7 -1      nntp.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=894985
Comment 9 Olivier Trichet 2009-01-18 01:54:52 UTC
*** Bug 167419 has been marked as a duplicate of this bug. ***
Comment 10 Olivier Trichet 2009-01-18 01:59:13 UTC
*** Bug 178365 has been marked as a duplicate of this bug. ***