Try to login just after the connection to the server. Some servers do not give access to some groups otherwise.

BUG: 167718

svn path=/trunk/KDE/kdepimlibs/; revision=893724